--- a/Site/Resources/css/index.css
+++ b/Site/Resources/css/index.css
@@ -2,6 +2,7 @@
     --color-secondary: #19504e;
     --color-primary: #058b3c;
     --color-error: red;
+    --color-footer: #182538;
     --card-radius: .75rem;
     --color-text-title: #182538;
     --color-text-setence: #6B7A90;
@@ -26,6 +27,7 @@
 }
 
 body {
+    color: #6B7A90;
     margin: 0;
     font-family: 'Heebo Regular';
 }
@@ -41,32 +43,32 @@ nav {
     background-color: #6a817854;
 }
 
-nav .content {
-    display: inline-flex;
-}
+    nav .content {
+        display: inline-flex;
+    }
 
-nav .logo {
-    width: 7.5rem;
-    height: 2.5rem;
-    transition: 0.3s;
-    border-radius: 2rem;
-    left: 2rem;
-    padding: 0.5rem;
-    margin: 0 2rem;
-    cursor: pointer;
-    background: #a5a5a542;
-    box-shadow: 0px 10px 42px -16px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 0px 10px 42px -16px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 10px 42px -16px rgba(0, 0, 0, 0.75);
-}
+    nav .logo {
+        width: 7.5rem;
+        height: 2.5rem;
+        transition: 0.3s;
+        border-radius: 2rem;
+        left: 2rem;
+        padding: 0.5rem;
+        margin: 0 2rem;
+        cursor: pointer;
+        background: #a5a5a542;
+        box-shadow: 0px 10px 42px -16px rgba(0, 0, 0, 0.75);
+        -webkit-box-shadow: 0px 10px 42px -16px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 0px 10px 42px -16px rgba(0, 0, 0, 0.75);
+    }
 
-nav .logo:hover {
-    transition: 0.3s;
-    transform: perspective(16rem) translate3d(0, 0, .45rem);
-    box-shadow: 0px 10px 42px -2px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 0px 10px 42px -2px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 10px 42px -2px rgba(0, 0, 0, 0.75);
-}
+        nav .logo:hover {
+            transition: 0.3s;
+            transform: perspective(16rem) translate3d(0, 0, .45rem);
+            box-shadow: 0px 10px 42px -2px rgba(0, 0, 0, 0.75);
+            -webkit-box-shadow: 0px 10px 42px -2px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: 0px 10px 42px -2px rgba(0, 0, 0, 0.75);
+        }
 
 main {
     background: linear-gradient(121deg, var(--color-secondary), #102C57);
@@ -81,17 +83,17 @@ main {
     padding: 15% 0 7rem 0;
 }
 
-main::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 13.3rem;
-    background: url(../img/wave.svg);
-    background-repeat: repeat-x;
-    z-index: 0;
-}
+    main::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 13.3rem;
+        background: url(../img/wave.svg);
+        background-repeat: repeat-x;
+        z-index: 0;
+    }
 
 @media screen and (max-width: 640px) {
     main::before {
@@ -103,44 +105,44 @@ main section {
     color: white;
 }
 
-main section.text p {
-    max-width: 28rem;
-    margin: auto;
-    font-family: 'Heebo Thin';
-    font-size: larger;
-    color: white;
-}
+    main section.text p {
+        max-width: 28rem;
+        margin: auto;
+        font-family: 'Heebo Thin';
+        font-size: larger;
+        color: white;
+    }
 
-main section.text h1 {
-    font-size: 2.7rem;
-    margin: 1.3rem;
-    color: white;
-}
+    main section.text h1 {
+        font-size: 2.7rem;
+        margin: 1.3rem;
+        color: white;
+    }
 
-main section.text h1 span {
-    font-size: 2.8rem;
-}
+        main section.text h1 span {
+            font-size: 2.8rem;
+        }
 
-main section.read-more {
-    margin-top: 5rem;
-}
+    main section.read-more {
+        margin-top: 5rem;
+    }
 
-main section.read-more p {
-    margin: 0;
-    color: white;
-}
+        main section.read-more p {
+            margin: 0;
+            color: white;
+        }
 
-main section.read-more img.arrow {
-    width: 3.5em;
-    margin: 0;
-    animation: MoreArrowAnimation 1.3s cubic-bezier(0.61, 0.01, 0.49, 0.8) infinite;
-}
+        main section.read-more img.arrow {
+            width: 3.5em;
+            margin: 0;
+            animation: MoreArrowAnimation 1.3s cubic-bezier(0.61, 0.01, 0.49, 0.8) infinite;
+        }
 
-main section.read-more img.arrow:hover {
-    transform: perspective(6rem);
-    cursor: pointer;
-    animation: none;
-}
+            main section.read-more img.arrow:hover {
+                transform: perspective(6rem);
+                cursor: pointer;
+                animation: none;
+            }
 
 section.body {
     margin: 0 1.5%;
@@ -159,15 +161,15 @@ section.body .header {
     margin-top: 5rem;
 }
 
-section.body .header h1 {
-    font-size: xx-large;
-}
+    section.body .header h1 {
+        font-size: xx-large;
+    }
 
-section.body .header p {
-    max-width: 35rem;
-    margin: 1rem auto 3rem auto;
-    font-size: large;
-}
+    section.body .header p {
+        max-width: 35rem;
+        margin: 1rem auto 3rem auto;
+        font-size: large;
+    }
 
 section.contact .left {
     display: inline-grid;
@@ -176,9 +178,9 @@ section.contact .left {
     z-index: 10;
 }
 
-section.contact .left img {
-    margin: 0 auto;
-}
+    section.contact .left img {
+        margin: 0 auto;
+    }
 
 .content.slide {
     opacity: 0;
@@ -210,10 +212,10 @@ div.cards .feature {
     transition: .3s ease-out;
 }
 
-div.cards .feature:hover {
-    transform: perspective(7.5rem) translate3d(0, 0, 10px);
-    transition: .5s;
-}
+    div.cards .feature:hover {
+        transform: perspective(7.5rem) translate3d(0, 0, 10px);
+        transition: .5s;
+    }
 
 .feature h1 {
     color: var(--color-secondary);
@@ -231,35 +233,35 @@ section.singup {
     text-align: left;
     padding: .95rem;
     box-shadow: 0px 10px 38px 3px rgb(0 0 0 / 60%);
-    margin-top: 5rem;
-    margin-bottom: -11rem;
+    margin-top: 6rem;
+    margin-bottom: -1rem;
     background: white;
 }
 
-section.singup div {
-    min-width: fit-content;
-}
+    section.singup div {
+        min-width: fit-content;
+    }
 
-section.singup div.text {
-    width: 60%;
-    padding: 0 6rem 0 1rem;
-}
+        section.singup div.text {
+            width: 60%;
+            padding: 0 6rem 0 1rem;
+        }
 
-section.singup div.text h1 {
-    margin: 0;
-    color: var(--color-text-title);
-}
+            section.singup div.text h2 {
+                margin: 0;
+                color: var(--color-text-title);
+            }
 
-section.singup div.text p {
-    color: var(--color-text-setence);
-    margin: .1rem 0;
-}
+            section.singup div.text p {
+                color: var(--color-text-setence);
+                margin: .1rem 0;
+            }
 
-section.singup div.buttons {
-    width: 40%;
-    padding-top: 1%;
-    display: inline-flex;
-}
+        section.singup div.buttons {
+            width: 40%;
+            padding-top: 1%;
+            display: inline-flex;
+        }
 
 button {
     font-size: 1rem;
@@ -273,27 +275,28 @@ button {
     border-radius: .5rem;
 }
 
-button:hover {
-    box-shadow: 0px 1px 22px 2px #08ac52c4;
-    transform: perspective(7rem) translate3d(0, 0, .25rem);
-}
+    button:hover {
+        box-shadow: 0px 1px 22px 2px #08ac52c4;
+        transform: perspective(7rem) translate3d(0, 0, .25rem);
+    }
 
-button.positive {
-    background: linear-gradient(45deg, var(--color-secondary), #08ac4b);
-    border: none;
-    outline: none;
-    color: white;
-}
+    button.positive {
+        background: linear-gradient(45deg, var(--color-secondary), #08ac4b);
+        border: none;
+        outline: none;
+        color: white;
+    }
 
-button.negative {
-    border-color: var(--color-primary);
-    border-width: 1px;
-    color: var(--color-primary);
-    border-style: solid;
-}
+    button.negative {
+        border-color: var(--color-primary);
+        border-width: 1px;
+        color: var(--color-primary);
+        border-style: solid;
+    }
 
 footer {
     text-align: center;
+    background: var(--color-footer);
 }
 
 .list-reset {
@@ -331,90 +334,90 @@ footer {
     flex-wrap: wrap;
 }
 
-.carousel .image {
-    filter: grayscale(87%);
-    margin: 1.5rem 1rem;
-    padding: 0 .5rem;
-    transition: .45s;
-}
+    .carousel .image {
+        filter: grayscale(87%);
+        margin: 1.5rem 1rem;
+        padding: 0 .5rem;
+        transition: .45s;
+    }
 
-.carousel .image:hover,
-.carousel .image.focus {
-    filter: none;
-    margin: 1.5rem;
-    cursor: pointer;
-    padding: 0;
-    transform: perspective(3.5rem) translate3d(0, 0, 10px);
-    transition: .35s ease;
-}
+        .carousel .image:hover,
+        .carousel .image.focus {
+            filter: none;
+            margin: 1.5rem;
+            cursor: pointer;
+            padding: 0;
+            transform: perspective(3.5rem) translate3d(0, 0, 10px);
+            transition: .35s ease;
+        }
 
 .content-divided {
     width: 100%;
-    margin: 0 auto !important;
+    margin: 1.2rem auto !important;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
 
-.content-divided.reverse {
-    flex-wrap: wrap-reverse;
-}
+    .content-divided.reverse {
+        flex-wrap: wrap-reverse;
+    }
 
-.content-divided .divider {
-    width: 2%;
-    max-width: .4rem;
-    height: 25rem;
-    background: var(--color-secondary);
-    border-radius: 1rem;
-}
+    .content-divided .divider {
+        width: 2%;
+        max-width: .4rem;
+        height: 25rem;
+        background: var(--color-secondary);
+        border-radius: 1rem;
+    }
 
-.content-divided .content {
-    width: 49%;
-    min-width: 500px;
-    max-width: 25rem;
-    padding: 2.5rem 0;
-    text-align: center;
-    z-index: 10;
-}
+    .content-divided .content {
+        width: 49%;
+        min-width: 500px;
+        max-width: 25rem;
+        padding: 2.5rem 0;
+        text-align: center;
+        z-index: 10;
+    }
 
-.content-divided .content h1 {
-    font-size: xx-large;
-    color: var(--color-secondary);
-}
+        .content-divided .content h1 {
+            font-size: xx-large;
+            color: var(--color-secondary);
+        }
 
-.content-divided .content p {
-    max-width: 21rem;
-    margin: 1.25rem auto;
-    font-size: large;
-}
+        .content-divided .content p {
+            max-width: 21rem;
+            margin: 1.25rem auto;
+            font-size: large;
+        }
 
-.content-divided .content.background-gradient {
-    background: linear-gradient(121deg, var(--color-secondary), #102C57);
-    background-size: 600% 600%;
-    -webkit-animation: GradientAnimation 3s ease infinite;
-    -moz-animation: GradientAnimation 3s ease infinite;
-    -o-animation: GradientAnimation 3s ease infinite;
-    animation: GradientAnimation 3s ease infinite;
-    padding: 0 !important;
-}
+        .content-divided .content.background-gradient {
+            background: linear-gradient(121deg, var(--color-secondary), #102C57);
+            background-size: 600% 600%;
+            -webkit-animation: GradientAnimation 3s ease infinite;
+            -moz-animation: GradientAnimation 3s ease infinite;
+            -o-animation: GradientAnimation 3s ease infinite;
+            animation: GradientAnimation 3s ease infinite;
+            padding: 0 !important;
+        }
 
-.content-divided .content.background-gradient .ocutor {
-    background-image: url(../img/blob-scene.png);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    min-height: 14rem;
-    padding: 1rem !important;
-    display: flex;
-    justify-content: center;
-}
+            .content-divided .content.background-gradient .ocutor {
+                background-image: url(../img/blob-scene.png);
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+                min-height: 14rem;
+                padding: 1rem !important;
+                display: flex;
+                justify-content: center;
+            }
 
-.content-divided .content.background-gradient .ocutor img {
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
-    margin: 0 auto;
-}
+                .content-divided .content.background-gradient .ocutor img {
+                    max-width: 100%;
+                    max-height: 100%;
+                    display: block;
+                    margin: 0 auto;
+                }
 
 .ocutor.normal {
     background-image: url(../img/blob-scene-1.png) !important;
@@ -469,56 +472,56 @@ b {
     word-wrap: normal !important
 }
 
-.screen-reader-text:focus {
-    border-radius: 2px;
-    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
-    clip: auto !important;
-    display: block;
-    font-family: "IBM Plex Sans", sans-serif;
-    font-size: 14px;
-    letter-spacing: 0px;
-    font-weight: 600;
-    line-height: 16px;
-    text-decoration: none;
-    text-transform: uppercase;
-    background-color: #fff;
-    color: #535FD7 !important;
-    border: none;
-    height: auto;
-    left: 8px;
-    padding: 16px 32px;
-    top: 8px;
-    width: auto;
-    z-index: 100000
-}
+    .screen-reader-text:focus {
+        border-radius: 2px;
+        box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+        clip: auto !important;
+        display: block;
+        font-family: "IBM Plex Sans", sans-serif;
+        font-size: 14px;
+        letter-spacing: 0px;
+        font-weight: 600;
+        line-height: 16px;
+        text-decoration: none;
+        text-transform: uppercase;
+        background-color: #fff;
+        color: #535FD7 !important;
+        border: none;
+        height: auto;
+        left: 8px;
+        padding: 16px 32px;
+        top: 8px;
+        width: auto;
+        z-index: 100000
+    }
 
 .site-footer {
     font-size: 14px;
     line-height: 20px;
     letter-spacing: 0px;
-    background: #182538;
+    background: var(--color-footer);
     color: #6B7A90;
     padding: 0 2.5rem;
 }
 
-.site-footer .container {
-    margin-top: -2rem;
-}
+    .site-footer .container {
+        margin-top: -2rem;
+    }
 
-.site-footer a {
-    color: #6B7A90;
-    text-decoration: none
-}
+    .site-footer a {
+        color: #6B7A90;
+        text-decoration: none
+    }
 
-.site-footer a:hover,
-.site-footer a:active {
-    text-decoration: none;
-    color: navajowhite;
-}
+        .site-footer a:hover,
+        .site-footer a:active {
+            text-decoration: none;
+            color: navajowhite;
+        }
 
-.site-footer::before {
-    display: none
-}
+    .site-footer::before {
+        display: none
+    }
 
 .lights-off .site-footer::before {
     display: block
@@ -548,18 +551,18 @@ b {
     margin-bottom: 24px
 }
 
-.footer-links li+li,
-.footer-social-links li+li {
-    margin-left: 16px
-}
+    .footer-links li + li,
+    .footer-social-links li + li {
+        margin-left: 16px
+    }
 
-.footer-social-links li {
-    display: inline-flex
-}
+    .footer-social-links li {
+        display: inline-flex
+    }
 
-.footer-social-links li a {
-    padding: 8px
-}
+        .footer-social-links li a {
+            padding: 8px
+        }
 
 .asset-logo {
     max-width: 2.5rem;
@@ -568,16 +571,16 @@ b {
 @media (max-width: 860px) {
     section.singup {
         display: inline-block;
-        margin: 0rem -4rem 0rem 0rem;
+        margin: 3rem 2rem 0rem 0rem;
         text-align: center;
     }
 
-    section.singup div.text {
-        text-align: center;
-        width: 100%;
-        margin: 0 3rem 0rem 0rem;
-        padding: 0;
-    }
+        section.singup div.text {
+            text-align: center;
+            width: 100%;
+            margin: 0 3rem 0rem 0rem;
+            padding: 0;
+        }
 }
 
 @media screen and (min-device-width: 641px) and (min-width: 860px) {
@@ -607,6 +610,47 @@ b {
     .footer-links {
         order: 1;
         margin-bottom: 0
+    }
+}
+
+section.content.footer {
+    padding: 0 0 12rem 0;
+    margin: -3rem 0 -12rem 0;
+}
+
+    section.content.footer .right {
+    }
+
+    section.content.footer img {
+        background: transparent;
+    }
+
+    section.content.footer .content-divided {
+        background: var(--color-footer);
+        margin: -3rem auto !important
+    }
+
+        section.content.footer .content-divided img {
+            background: transparent;
+            margin: 0;
+            padding: 0;
+            width: 800px;
+            max-width: 60%;
+            transform: scale3d(1.25, 1.25, 1.5);
+            animation: floating 3s ease-in-out infinite;
+        }
+
+@keyframes floating {
+    0% {
+        transform: scale3d(1.15, 1.15, 1.5) translate(-5px, 0px);
+    }
+
+    50% {
+        transform: scale3d(1.15, 1.15, 1.5) translate(5px, 15px);
+    }
+
+    100% {
+        transform: scale3d(1.15, 1.15, 1.5) translate(-5px, 0px);
     }
 }
 
